--- a/trunk/ propeller-w5200-driver/Spinneret-msrobots/Sntp.htm
+++ b/trunk/ propeller-w5200-driver/Spinneret-msrobots/Sntp.htm
@@ -216,7 +216,7 @@
 <a href= "#lbl5" class = "toc4"> GetTransmitTimestamp</a><br/>
 <a href= "#lbl7" class = "toc4">HumanTime</a><br/>
 <a href= "#lbl9" class = "toc2">Documentation </a><br/>
-<a href= "#lbl11" class = "toc2">MIT License </a><br/>
+<a href= "#lbl10" class = "toc2">MIT License </a><br/>
 
 		</div>
 	</div>
@@ -386,11 +386,7 @@ v2.01&nbsp;&nbsp;&nbsp;02-02-2013&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp
 </pre>
 <hr /><br />
 <h2 id = "lbl9">Documentation </h2>
-<br /><a onclick ="javascript:ShowHide('lbl10')" href="javascript:;">SOURCE CODE...</a>
-<pre class=source id=lbl10>                                                    'Documentation
-
-</pre>
-<hr /><pre>
+<pre>
 This .spin file supports PhiPi's great Spin Code Documenter found at
 http://www.phipi.com/spin2html/
 
@@ -400,12 +396,8 @@ If you change the .spin file you can (re)create the .htm file by uploading your 
 to http://www.phipi.com/spin2html/ and then saving the the created .htm page. 
 </pre>
 <br />
-<h2 id = "lbl11">MIT License </h2>
-<br /><a onclick ="javascript:ShowHide('lbl12')" href="javascript:;">SOURCE CODE...</a>
-<pre class=source id=lbl12>                                                    'MIT License
-
-</pre>
-<hr /><pre>
+<h2 id = "lbl10">MIT License </h2>
+<pre>
  ______________________________________________________________________________________
 |                            TERMS OF USE: MIT License                                 |                                                            
 |______________________________________________________________________________________|
