--- a/trunk/ propeller-w5200-driver/Spinneret-msrobots/fullDuplexSerial4port.htm
+++ b/trunk/ propeller-w5200-driver/Spinneret-msrobots/fullDuplexSerial4port.htm
@@ -211,9 +211,7 @@
 		<p class = "toc1">Table of Contents</p>
 		<div style = "text-align: left; margin-left: 10px;">
 			<a href= "#lbl1" class = "toc2">Preface</a><br/>
-<a onclick ="javascript:ShowHide('toc2')" href="javascript:;" class = "toc2">Global CONstants ... </a><br />
-<div id= "toc2" class = "tocgrp">
-</div>
+<a href= "#lbl2" class = "toc2">Global CONstants </a><br/>
 <a href= "#lbl4" class = "toc2">PUBlic Spin Methods </a><br/>
 <a href= "#lbl5" class = "toc4">Init</a><br/>
 <a href= "#lbl7" class = "toc4">AddPort</a><br/>
@@ -233,7 +231,7 @@
 <a href= "#lbl35" class = "toc4">hex</a><br/>
 <a href= "#lbl37" class = "toc2">Assembly Cog </a><br/>
 <a href= "#lbl41" class = "toc2">Documentation </a><br/>
-<a href= "#lbl43" class = "toc2">MIT License </a><br/>
+<a href= "#lbl42" class = "toc2">MIT License </a><br/>
 
 		</div>
 	</div>
@@ -1378,11 +1376,7 @@ extra                   <var>byte</var>    0 [RXTX_BUFSIZE - (RXTX_BUFSIZE &lt;#
 </pre>
 <hr /><br />
 <h2 id = "lbl41">Documentation </h2>
-<br /><a onclick ="javascript:ShowHide('lbl42')" href="javascript:;">SOURCE CODE...</a>
-<pre class=source id=lbl42>                                                    'Documentation
 
-</pre>
-<hr />
 This .spin file supports PhiPi's great Spin Code Documenter found at
 http://www.phipi.com/spin2html/
 
@@ -1392,12 +1386,8 @@ If you change the .spin file you can (re)create the .htm file by uploading your 
 to http://www.phipi.com/spin2html/ and then saving the the created .htm page. 
 <br />
 <br />
-<h2 id = "lbl43">MIT License </h2>
-<br /><a onclick ="javascript:ShowHide('lbl44')" href="javascript:;">SOURCE CODE...</a>
-<pre class=source id=lbl44>                                                    'MIT License
-
-</pre>
-<hr /><pre>
+<h2 id = "lbl42">MIT License </h2>
+<pre>
  ______________________________________________________________________________________
 |                            TERMS OF USE: MIT License                                 |                                                            
 |______________________________________________________________________________________|
